<resources>
    <string name="app_name">SchoolCabinet</string>
    <string name="company_name_ch">杭州西野</string>
    <string name="back_btn">返回</string>
    <string name="edit_title_student">请输入学号及密码</string>
    <string name="edit_title_admin">请输入账号及密码</string>
    <string name="student_number">学号</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="new_password">新密码</string>
    <string name="copy_right">Copyright©%1$s  51xiye.com</string>
    <string name="account_necessary">请输入账号</string>
    <string name="student_number_necessary">请输入学号</string>
    <string name="pwd_necessary">请输入密码</string>
    <string name="pwd_rule">密码必须是6位数字</string>
    <string name="new_pwd_rule">新密码必须是6位数字</string>
    <string name="new_pwd_equal_old">新密码与原密码相同，确认修改？</string>
    <string name="cabinet_id_verify">学生柜ID号验证</string>
    <string name="cabinet_id">学生柜ID号</string>
    <string name="open_single_box">开单个学生柜</string>
    <string name="student_or_box_number">学号或柜号</string>
    <string name="open_all_boxes">开所有的学生柜</string>
    <string name="open_all_confirm">全开，确定</string>
    <string name="cabinet_status">学生柜状态</string>
    <string name="status_confirm">状态，确定</string>
    <string name="no_card">无卡操作</string>
    <string name="open_box">开箱</string>
    <string name="card_id_null">卡号为空</string>
    <string name="card_id_invalid">卡号无效</string>
    <string name="cabinet_id_necessary">请输入学生柜ID号</string>
    <string name="verify_cabinet_id_suc">验证成功</string>
    <string name="verify_cabinet_id_fail">验证失败</string>
    <string name="verify_ing">验证中&#8230;</string>
    <string name="teacher">老师</string>
    <string name="student">学生</string>
    <string name="admin">管理员</string>
    <string name="help">帮助</string>
    <string name="help_content">1、在首界面（开箱界面），可直接刷卡开箱\n2、点击对应角色，点击后输入账号密码登陆，可以编辑行使对应功能\n3、如上还不能开箱，请联系本班老师或学校书包柜管理员，现场或远程开箱\n4、老师可刷卡或点击对应角色登陆，选择单开，全开\n5、强制开箱：即用钥匙将底部柜锁打开，徒手向上拨动强制开锁条开箱\n6、公共教室请确认是否退箱再使用柜子，谢谢配合</string>
    <string name="open_lock_suc">打开箱门(%d)成功</string>
    <string name="open_lock_fail">打开箱门(%d)失败，请联系管理员</string>
    <string name="countdown">倒计时</string>
    <string name="new_password_hint">如需要更改密码，请输入6位新密码</string>
    <string name="server_data_unusual">服务器数据异常</string>
    <string name="open_single_box_id_necessary">请输入学号或者柜子号,不能为空</string>
    <string name="open_single_box_id_real">请输入正确的学号或者柜子号：输入的号码不在柜子号总数范围内</string>
    <string name="no_data">暂无数据</string>
    <string name="box_door_status_open">打开</string>
    <string name="box_door_status_close">关闭</string>
    <string name="box_door_status_damage">损坏</string>
    <string name="card_id">卡号</string>
    <string name="box_id">箱子号</string>
    <string name="box_status">箱子状态</string>
    <string name="operation_time">操作时间</string>
</resources>
