<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top"
        layout="@layout/layout_top_info" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom"
        android:layout_below="@+id/top"
        android:padding="20dp">

        <LinearLayout
            android:id="@+id/ll_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/card_id"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/box_id"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/box_status"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/operation_time"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_status"
            style="@style/ListView"
            android:layout_below="@+id/ll_title"></ListView>

        <TextView
            android:id="@+id/tv_no_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_data"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/text_size_middle"
            android:visibility="gone" />
    </RelativeLayout>

    <include
        android:id="@+id/bottom"
        layout="@layout/layout_bottom" />

</RelativeLayout>