<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/top"
        layout="@layout/layout_top_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_verify_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cabinet_id_verify"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_verify_title">

                <TextView
                    android:id="@+id/tv_cabinet_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/cabinet_id"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />

                <com.xiye.sclibrary.widget.edittext.DeleteableEditText
                    android:id="@+id/et_cabinet_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_verify_id"
                    android:layout_toRightOf="@id/tv_cabinet_id"
                    android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_verify_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/confirm"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_open_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/open_all_boxes"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/btn_open_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_open_all"
                    android:text="@string/open_all_confirm"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_cabinet_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cabinet_status"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />

                <Button
                    android:id="@+id/btn_status_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_cabinet_status"
                    android:text="@string/status_confirm"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_open_single_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_single_box"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/text_size_small" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_open_single_box">

                <TextView
                    android:id="@+id/tv_student_or_box_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/student_or_box_number"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />

                <com.xiye.sclibrary.widget.edittext.DeleteableEditText
                    android:id="@+id/et_student_or_box_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/btn_open_single_box"
                    android:layout_toRightOf="@id/tv_student_or_box_number"
                    android:imeOptions="flagNoFullscreen|flagNoExtractUi"
                    android:inputType="number" />

                <Button
                    android:id="@+id/btn_open_single_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/confirm"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/text_size_small" />
            </RelativeLayout>

        </RelativeLayout>

    </LinearLayout>

    <include layout="@layout/layout_bottom" />
</RelativeLayout>